--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.1.5",
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/stripe-js": "^2.4.0",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "jwt-decode": "^3.1.2",
+    "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-razorpay": "^2.0.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
