--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/stripe-js": "^2.4.0",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "formik": "^2.4.5",
     "jwt-decode": "^3.1.2",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-input-emoji": "^5.6.5",
     "react-razorpay": "^2.0.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.4",
+    "timeago.js": "^4.0.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
